Fix navbar background color on mobile

--- a/wp-content/themes/revitta/style.css
+++ b/wp-content/themes/revitta/style.css
@@ -1050,7 +1050,7 @@ footer .copyright .float-end a {
 
 @media (max-width: 991.98px) {
   .navbar {
-    background-color: #20585ecc !important;
+    background-color: #20585ecc;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
